src/objects/Compliance_Case__c/Compliance_Case__c.object-meta.xml
<CustomObject>
    <description>Compliance Case</description>
    <label>Compliance Case</label>
    <nameField>
        <label>Compliance Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>