src/objects/Compliance_Case__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>150</length>
    <type>Text</type>
</CustomField>