src/objects/Compliance_Case__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <description>Queue Name</description>
    <label>Owner Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>