src/objects/Compliance_Case__c/listViews/All_Compliance_Cases.listView-meta.xml
<ListView>
    <fullName>All_Compliance_Cases</fullName>
    <columns>NAME</columns>
    <columns>SLA__c</columns>
    <columns>Status__c</columns>
    <columns>Origin__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Name__c</columns>
    <columns>Subject__c</columns>
    <columns>Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Compliance Cases</label>
</ListView>