src/objects/Compliance_Case__c/listViews/Compliance_Queue_GTO.listView-meta.xml
<ListView>
    <fullName>Compliance_Queue_GTO</fullName>
    <columns>NAME</columns>
    <columns>SLA__c</columns>
    <columns>Origin__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>Account_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Queue_Name__c</field>
        <operation>equals</operation>
        <value>Compliance Queue GTO</value>
    </filters>
    <label>Compliance Queue GTO</label>
</ListView>