src/objects/Compliance_Case__c/listViews/General_Compliance_Queue.listView-meta.xml
<ListView>
    <fullName>General_Compliance_Queue</fullName>
    <columns>NAME</columns>
    <columns>SLA__c</columns>
    <columns>Origin__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Name__c</columns>
    <columns>Queue_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Queue_Name__c</field>
        <operation>equals</operation>
        <value>General Compliance Queue</value>
    </filters>
    <label>General Compliance Queue</label>
</ListView>